--- a/package.json
+++ b/package.json
@@ -18,15 +18,31 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.6.3",
-    "path": "^0.12.7"
+    "html-webpack-plugin": "^5.1.0",
+    "path": "^0.12.7",
+    "sass": "^1.70.0",
+    "sass-loader": "^10",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
+    "@mui/styles": "^5.15.8",
     "@tinkoff/invest-openapi-js-sdk": "^1.5.0",
+    "@webpack-cli/serve": "^2.0.5",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "url-loader": "^4.1.1"
   }
 }
